--- a/WorkDir/Assets/Lang/en_US.xml
+++ b/WorkDir/Assets/Lang/en_US.xml
@@ -3,7 +3,9 @@
   <string id="IDS_QUESTION_WHERES_THE_CD" value="Please insert the game CD, and hit retry." />
   <string id="IDS_ALERT" value="Alert" />
   <string id="IDS_QUESTION" value="Question" />
-  <string id="IDS_QUESTION_QUIT_GAME" value="Do you really\n want to quit\n the game?" />
+  <string id="IDS_QUESTION_QUIT_GAME" value="Do you really
+want to quit
+the game?" />
   <string id="IDS_INITIALIZING" value="Initializing" />
   <string id="IDS_OK" value="Ok" hotkey="O" />
   <string id="IDS_YES" value="Yes" hotkey="Y"/>
@@ -18,7 +20,11 @@
   <string id="IDS_LOADING" value="Loading Game..." />
   <string id="IDS_NOPHYSICS" value="Physics Has Been Disabled... This Game Will Be Boring." />
   <string id="IDS_CONTROLS_HEADER" value="Controls (F1 to hide):" />
-  <string id="IDS_CONTROLS" value="Move: WASD\nFire: Left Mouse Button\nF9:  Control Teapot\nF11: Free camera\nQuit: ESC" />
+  <string id="IDS_CONTROLS" value="Move: WASD
+Fire: Left Mouse Button
+F9:  Control Teapot
+F11: Free camera
+Quit: ESC" />
   <string id="IDS_CAMERA_LOCATION" value="Camera location: %.2f, %.2f, %.2f" />
   <string id="IDS_RUSSIAN" value="???????? ??? ????? ????? ??????" />
   <string id="IDS_CHINESE" value="?????????" />
